2003-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/tragesym, README: Added tragesym 0.0.5 by Werner Hoch.
	Ales renamed script from tragesym.py to tragesym (to be consistent
	with the rest of the scripts in the utils package).

	* README.tragesym, ChangeLog.tragesym: Added info files which are
	part of tragesym.  Minor updates here and there.

	* examples/tragesym, examples/gmk_sym: Reoganized the examples
	directory to include tragesym.

2003-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/sarlacc_schem.c: Initalized some variables to make compiler 
	happy.

	* configure.in: Applied Wojciech Kazubski's --with-docdir patch

2003-05-22 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Updated version

2003-05-13 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/sarlacc_schem.c: Applied patch by Charles Lepple to fix a 
	build problem on OSX.

2003-02-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Added shell code to expand prefix and set the
	GEDADOCDIR to the proper path ($prefix/share/doc/geda-doc

	* scripts/config.sh.in: Changed variables to use the above
	GEDADOCDIR

2003-02-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * gschlas/gschlas.c: Applied patchlet from Steve Tell for disabling
        the guile 1.6.3 deprecated warnings.

	* scripts/refdes_renum: Added useful perl script by Dan McMahill.
	Thanks.

2003-02-18 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Bumped version to 20030223

2003-02-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Applied Gabriel Paubert's warning reducing patch with
        a few minor mods.

2003-01-26 Ales Hvezda   <ahvezda@geda.seul.org>
		
	* src/Makefile.am: Added liberty to all targets for mingw

2003-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

	* Makefile.am: Fixed the distclean-local target. 

2002-12-30 Chris Ellec <chris @ gtx.seul.org>

	* utils/src/gmk_sym.c: updated file format to 20021103
     	for pins and boxes.
